# FTMS

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
backend/: CMakeLists.txt  main.cpp
backend/ai/: ai_manager.cpp  ai_manager.h
backend/db/: db_manager.cpp  db_manager.h
backend/network/: client_handler.cpp  client_handler.h  tcp_server.cpp  tcp_server.h
common/include/: data_model.h
frontend/: CMakeLists.txt  main.cpp  resources.qrc
frontend/network/: tcp_client.cpp  tcp_client.h
frontend/ui/: chat_dialog.cpp  chat_dialog.h  flight_card.cpp  flight_card.h  flight_page.cpp  flight_page.h  flight_page.ui  login_page.cpp  login_page.h  login_page.ui  main_window.cpp  main_window.h  main_window.ui  order_card.cpp  order_card.h  orders_page.cpp  orders_page.h  profile_page.cpp  profile_page.h  register_page.cpp  register_page.h  seat_selection_dialog.cpp  seat_selection_dialog.h  theme_manager.h
tools/: generate_flights.py
